Introduced dedicated methods in FetchPerson and PersonSaveService for fetching and saving family relationships; replaced ExpandedPerson usage and adjusted related services and tests accordingly.